--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,69 +1,68 @@
-.navbar {
-  font-family: "Prompt", sans-serif;
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  padding-bottom: 70px;
+  padding: 10px 20px;
   background-color: #092039;
-  position: fixed; /* Fijar el header */
+  position: fixed; /* Fija el header en la parte superior */
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px; /* Asegurar altura */
-  z-index: 1000; /* Asegurar que esté encima del sidebar */
-}
+  height: 60px; /* Altura fija para el header */
+  z-index: 1000; /* Asegura que el header esté sobre el sidebar */
 
-.navbar-logo {
-  width: 195px;
-  height: 57px;
-  margin-right: 10px;
-}
-
-.navbar-title {
-  display: inline-block;
-  color: white;
-}
-
-.navbar-right {
-  display: flex;
-}
-
-.navbar-right a {
-  color: white;
-  text-decoration: none;
-  padding: 0 10px;
-}
-
-.navbar-right a:hover {
-  text-decoration: underline;
-}
-
-.navbar-menu {
-  display: none;
-}
-
-.desktop-only {
-  display: flex;
-}
-
-.mobile-only {
-  display: none;
-}
-
-@media (max-width: 768px) {
-  .navbar-title {
-    display: none;
+  .title {
+    font-size: 18px;
   }
 
-  .desktop-only {
-    display: none;
-  }
-
-  .mobile-only {
+  .user-menu {
     display: flex;
-    color: white;
-    font-size: 1.5rem;
-    cursor: pointer;
+    align-items: center;
+    gap: 8px;
+
+    .user-name {
+      font-size: 14px;
+      color: #fff;
+    }
+
+    .user-icon {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: #1d3249; /* Simulación de imagen */
+    }
+  }
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #092039;
+  color: white;
+  padding: 10px 20px;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+}
+
+
+
+.user-menu {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* El contenedor del botón hamburguesa se oculta en escritorio */
+.mobile-menu {
+  display: none;
+}
+
+/* Muestra el botón hamburguesa solo en dispositivos móviles */
+@media (max-width: 768px) {
+  .mobile-menu {
+    display: block;
   }
 }
