--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -38,7 +38,7 @@
 .content {
   margin-top: 60px;
   flex: 1;
-  margin-left: 250px;
+  /*margin-left: 250px;*/
   padding: 20px;
   display: flex;
   flex-direction: column;
