--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -36,11 +36,11 @@
 
 /* Ajuste del contenido principal para respetar el sidebar */
 .content {
-  margin-top: 60px;
+  /*margin-top: 60px;*/
   flex: 1;
   /*margin-left: 250px;*/
   padding: 20px;
-  display: flex;
+  /* display: flex;*/
   flex-direction: column;
 }
 
