--- a/src/app/admin/gestion-plandeintervencion/crear-plandeintervencion/crear-plandeintervencion.component.html
+++ b/src/app/admin/gestion-plandeintervencion/crear-plandeintervencion/crear-plandeintervencion.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <div class="card">
-        <div class="card-header bg-primary text-white">
-            <h3>Crear Plan de Intervención</h3>
+        <div class="card-header text-white">
+            <h3 class="titulo">Crear Plan de Intervención</h3>
         </div>
 
         <div class="card-body">
