modificaciones del header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,6 +5,9 @@
   background-color: #092039;
   padding: 10px 20px;
   color: #fff;
+  z-index: 999999;
+  position: fixed;
+  width: 100%;
 }
 
 .header-left {
