--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -36,7 +36,7 @@
 
 /* Ajuste del contenido principal para respetar el sidebar */
 .content {
-  /*margin-top: 60px;*/
+  margin-top: 60px;
   flex: 1;
   /*margin-left: 250px;*/
   padding: 20px;
